--- a/index.html
+++ b/index.html
@@ -116,76 +116,77 @@
     </section>
 
 <section id="skills-interests">
-    <div class="container">
-        <div class="row">
-            <!-- Interests Column -->
-            <div class="column interests">
-                <h3>Interests</h3>
-                <div class="interest-item">
-                    <h4>Artificial Intelligence</h4>
-                    <div class="sub-interests">
-                        <ul>
-                            <li>Computer Vision</li>
-                            <li>Natural Language Processing</li>
-                            <li>Deep Learning</li>
-                            <li>Machine Learning</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="interest-item">
-                    <h4>Data Science</h4>
-                    <div class="sub-interests">
-                        <ul>
-                            <li>Exploratory Data Analysis</li>
-                            <li>Data Mining</li>
-                            <li>Big Data</li>
-                            <li>Business Intelligence</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="interest-item">
-                    <h4>Computer Graphics</h4>
-                    <div class="sub-interests">
-                        <ul>
-                            <li>3D Computer Graphics</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="interest-item">
-                    <h4>Data Administration</h4>
-                    <div class="sub-interests">
-                        <ul>
-                            <li>Data Modelling</li>
-                            <li>Data Integration</li>
-                            <li>Database Architecture</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="interest-item">
-                    <h4>UX/UI Design</h4>
-                    <div class="sub-interests">
-                        <ul>
-                            <li>Design Principles</li>
-                            <li>Wireframing</li>
-                            <li>Prototyping</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <!-- Technical Skills Column -->
-            <div class="column technical-skills">
-                <h3>Technical Skills</h3>
-                <ul class="skills-list">
-                    <li><strong>Programming Languages:</strong> Python, Java, C, R, PL/SQL</li>
-                    <li><strong>Web & App Development:</strong> HTML5/CSS, OutSystems</li>
-                    <li><strong>Data & Statistical Tools:</strong> SPSS, Gretl, MATLAB</li>
-                    <li><strong>BI & Data Analysis:</strong> Power BI, Microsoft Office</li>
-                    <li><strong>Database Management:</strong> SQL (Oracle), PHC CS</li>
-                    <li><strong>Graphics & Design:</strong> Blender</li>
-                </ul>
-            </div>
+  <div class="container">
+    <div class="row">
+      <!-- Interests Column -->
+      <div class="column interests">
+        <h3>Interests</h3>
+        <div class="interest-item">
+          <h4>Artificial Intelligence</h4>
+          <div class="sub-interests">
+            <ul>
+              <li>Computer Vision</li>
+              <li>Natural Language Processing</li>
+              <li>Deep Learning</li>
+              <li>Machine Learning</li>
+            </ul>
+          </div>
         </div>
+        <div class="interest-item">
+          <h4>Data Science</h4>
+          <div class="sub-interests">
+            <ul>
+              <li>Exploratory Data Analysis</li>
+              <li>Data Mining</li>
+              <li>Big Data</li>
+              <li>Business Intelligence</li>
+            </ul>
+          </div>
+        </div>
+        <div class="interest-item">
+          <h4>Computer Graphics</h4>
+          <div class="sub-interests">
+            <ul>
+              <li>3D Computer Graphics</li>
+            </ul>
+          </div>
+        </div>
+        <div class="interest-item">
+          <h4>Data Administration</h4>
+          <div class="sub-interests">
+            <ul>
+              <li>Data Modelling</li>
+              <li>Data Integration</li>
+              <li>Database Architecture</li>
+            </ul>
+          </div>
+        </div>
+        <div class="interest-item">
+          <h4>UX/UI Design</h4>
+          <div class="sub-interests">
+            <ul>
+              <li>Design Principles</li>
+              <li>Wireframing</li>
+              <li>Prototyping</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <!-- Technical Skills Column -->
+      <div class="column technical-skills">
+        <h3>Technical Skills</h3>
+        <ul class="skills-list">
+          <li><strong>Programming:</strong> Python, Java, C, R</li>
+          <li><strong>Data Science:</strong> SPSS, Gretl, MATLAB</li>
+          <li><strong>Databases:</strong> SQL, PL/SQL (Oracle), PHC CS</li>
+          <li><strong>BI & Analytics:</strong> Power BI</li>
+          <li><strong>Web:</strong> HTML5/CSS, OutSystems</li>
+          <li><strong>Others:</strong> Blender, Microsoft Office</li>
+        </ul>
+      </div>
     </div>
+  </div>
 </section>
     
 <section id="hobbies">
