--- a/index.html
+++ b/index.html
@@ -175,13 +175,41 @@
             <!-- Technical Skills Column -->
             <div class="column technical-skills">
                 <h3>Technical Skills</h3>
-                <ul class="skills-list">
-                    <li>Programming Languages: Python, JavaScript, Java</li>
-                    <li>Databases: MySQL, PostgreSQL, MongoDB</li>
-                    <li>Web Development: HTML, CSS, JavaScript, React</li>
-                    <li>Data Science: Pandas, NumPy, Scikit-learn, TensorFlow</li>
-                    <li>DevOps: Docker, Kubernetes, AWS</li>
-                </ul>
+                <div class="skills-grid">
+                    <div class="skill-item">
+                        <img src="path/to/python-logo.png" alt="Python">
+                        <p>Python</p>
+                    </div>
+                    <div class="skill-item">
+                        <img src="path/to/java-logo.png" alt="Java">
+                        <p>Java</p>
+                    </div>
+                    <div class="skill-item">
+                        <img src="path/to/js-logo.png" alt="JavaScript">
+                        <p>JavaScript</p>
+                    </div>
+                    <div class="skill-item">
+                        <img src="path/to/sql-logo.png" alt="SQL">
+                        <p>SQL</p>
+                    </div>
+                    <div class="skill-item">
+                        <img src="path/to/html-logo.png" alt="HTML">
+                        <p>HTML</p>
+                    </div>
+                    <div class="skill-item">
+                        <img src="path/to/css-logo.png" alt="CSS">
+                        <p>CSS</p>
+                    </div>
+                    <div class="skill-item">
+                        <img src="path/to/powerbi-logo.png" alt="Power BI">
+                        <p>Power BI</p>
+                    </div>
+                    <div class="skill-item">
+                        <img src="path/to/matlab-logo.png" alt="MATLAB">
+                        <p>MATLAB</p>
+                    </div>
+                    <!-- Adicione mais blocos conforme necessário -->
+                </div>
             </div>
         </div>
     </div>
