--- a/index.html
+++ b/index.html
@@ -177,35 +177,35 @@
                 <h3>Technical Skills</h3>
                 <div class="skills-grid">
                     <div class="skill-item">
-                        <img src="path/to/python-logo.png" alt="Python">
+                        <img src="path/to/python.png" alt="Python">
                         <p>Python</p>
                     </div>
                     <div class="skill-item">
-                        <img src="path/to/java-logo.png" alt="Java">
+                        <img src="path/to/java.png" alt="Java">
                         <p>Java</p>
                     </div>
                     <div class="skill-item">
-                        <img src="path/to/js-logo.png" alt="JavaScript">
+                        <img src="path/to/javascript.png" alt="JavaScript">
                         <p>JavaScript</p>
                     </div>
                     <div class="skill-item">
-                        <img src="path/to/sql-logo.png" alt="SQL">
+                        <img src="path/to/SQLServer" alt="SQLServer">
                         <p>SQL</p>
                     </div>
                     <div class="skill-item">
-                        <img src="path/to/html-logo.png" alt="HTML">
+                        <img src="path/to/html5.png" alt="HTML">
                         <p>HTML</p>
                     </div>
                     <div class="skill-item">
-                        <img src="path/to/css-logo.png" alt="CSS">
+                        <img src="path/to/css" alt="CSS">
                         <p>CSS</p>
                     </div>
                     <div class="skill-item">
-                        <img src="path/to/powerbi-logo.png" alt="Power BI">
+                        <img src="path/to/powerbi.png" alt="Power BI">
                         <p>Power BI</p>
                     </div>
                     <div class="skill-item">
-                        <img src="path/to/matlab-logo.png" alt="MATLAB">
+                        <img src="path/to/matlab.png" alt="MATLAB">
                         <p>MATLAB</p>
                     </div>
                     <!-- Adicione mais blocos conforme necessário -->
