--- a/index.html
+++ b/index.html
@@ -172,43 +172,41 @@
                     </div>
                 </div>
             </div>
-            <!-- Technical Skills Column -->
             <div class="column technical-skills">
                 <h3>Technical Skills</h3>
                 <div class="skills-grid">
                     <div class="skill-item">
-                        <img src="path/to/python.png" alt="Python">
+                        <img src="images/Python.png" alt="Python">
                         <p>Python</p>
                     </div>
                     <div class="skill-item">
-                        <img src="path/to/java.png" alt="Java">
+                        <img src="images/java.png" alt="Java">
                         <p>Java</p>
                     </div>
                     <div class="skill-item">
-                        <img src="path/to/javascript.png" alt="JavaScript">
+                        <img src="images/javascript.png" alt="JavaScript">
                         <p>JavaScript</p>
                     </div>
                     <div class="skill-item">
-                        <img src="path/to/SQLServer" alt="SQLServer">
+                        <img src="images/SQLServer" alt="SQLServer">
                         <p>SQL</p>
                     </div>
                     <div class="skill-item">
-                        <img src="path/to/html5.png" alt="HTML">
+                        <img src="images/html5.png" alt="HTML">
                         <p>HTML</p>
                     </div>
                     <div class="skill-item">
-                        <img src="path/to/css" alt="CSS">
+                        <img src="images/css" alt="CSS">
                         <p>CSS</p>
                     </div>
                     <div class="skill-item">
-                        <img src="path/to/powerbi.png" alt="Power BI">
+                        <img src="images/powerbi.png" alt="Power BI">
                         <p>Power BI</p>
                     </div>
                     <div class="skill-item">
-                        <img src="path/to/matlab.png" alt="MATLAB">
+                        <img src="images/matlab.png" alt="MATLAB">
                         <p>MATLAB</p>
                     </div>
-                    <!-- Adicione mais blocos conforme necessário -->
                 </div>
             </div>
         </div>
