--- a/index.html
+++ b/index.html
@@ -176,28 +176,28 @@
                 <h3>Technical Skills</h3>
                 <div class="skills-grid">
                     <div class="skill-item">
-                        <img src="images/Python.png" alt="Python">
+                        <img src="images/html5.png" alt="HTML5">
+                    </div>
+                    <div class="skill-item">
+                        <img src="images/css3" alt="CSS3">
+                    </div>
+                    <div class="skill-item">
+                        <img src="images/javascript.png" alt="JavaScript">
+                    </div>
+                    <div class="skill-item">
+                        <img src="images/Python.jpg" alt="Python">
                         <p>Python</p>
                     </div>
                     <div class="skill-item">
                         <img src="images/java.png" alt="Java">
-                        <p>Java</p>
                     </div>
                     <div class="skill-item">
-                        <img src="images/javascript.png" alt="JavaScript">
-                        <p>JavaScript</p>
+                        <img src="images/c.png" alt="C">
                     </div>
                     <div class="skill-item">
                         <img src="images/SQLServer" alt="SQLServer">
                         <p>SQL</p>
                     </div>
-                    <div class="skill-item">
-                        <img src="images/html5.png" alt="HTML">
-                        <p>HTML</p>
-                    </div>
-                    <div class="skill-item">
-                        <img src="images/css" alt="CSS">
-                        <p>CSS</p>
                     </div>
                     <div class="skill-item">
                         <img src="images/powerbi.png" alt="Power BI">
