--- a/index.html
+++ b/index.html
@@ -179,25 +179,25 @@
                         <img src="images/html5.png" alt="HTML5">
                     </div>
                     <div class="skill-item">
-                        <img src="images/css3" alt="CSS3">
+                        <img src="images/css3.png" alt="CSS3">
                     </div>
                     <div class="skill-item">
                         <img src="images/javascript.png" alt="JavaScript">
                     </div>
                     <div class="skill-item">
                         <img src="images/Python.jpg" alt="Python">
-                        <p>Python</p>
                     </div>
                     <div class="skill-item">
                         <img src="images/java.png" alt="Java">
                     </div>
                     <div class="skill-item">
-                        <img src="images/c.png" alt="C">
+                        <img src="images/c.jpg" alt="C">
                     </div>
                     <div class="skill-item">
-                        <img src="images/SQLServer" alt="SQLServer">
-                        <p>SQL</p>
+                        <img src="images/SQLServer.png" alt="SQLServer">
                     </div>
+                    <div class="skill-item">
+                        <img src="images/oracledatabase.png" alt="OracleDatabase">
                     </div>
                     <div class="skill-item">
                         <img src="images/powerbi.png" alt="Power BI">
