--- a/index.html
+++ b/index.html
@@ -188,6 +188,9 @@
                         <img src="images/Python.jpg" alt="Python">
                     </div>
                     <div class="skill-item">
+                        <img src="images/r.jpg" alt="R">
+                    </div>
+                    <div class="skill-item">
                         <img src="images/java.png" alt="Java">
                     </div>
                     <div class="skill-item">
@@ -201,11 +204,24 @@
                     </div>
                     <div class="skill-item">
                         <img src="images/powerbi.png" alt="Power BI">
-                        <p>Power BI</p>
                     </div>
                     <div class="skill-item">
                         <img src="images/matlab.png" alt="MATLAB">
-                        <p>MATLAB</p>
+                    </div>
+                    <div class="skill-item">
+                        <img src="images/blender.png" alt="Blender">
+                    </div>
+                    <div class="skill-item">
+                        <img src="images/gretl.png" alt="Gretl">
+                    </div>
+                    <div class="skill-item">
+                        <img src="images/outsystems.png" alt="Outsystems">
+                    </div>
+                    <div class="skill-item">
+                        <img src="images/office.png" alt="Office">
+                    </div>
+                    <div class="skill-item">
+                        <img src="images/uml.png" alt="UML">
                     </div>
                 </div>
             </div>
