--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                         <img src="images/Python.jpg" alt="Python">
                     </div>
                     <div class="skill-item">
-                        <img src="images/r.jpg" alt="R">
+                        <img src="images/r.png" alt="R">
                     </div>
                     <div class="skill-item">
                         <img src="images/java.png" alt="Java">
