--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 <h3>Technical Skills</h3>
                 <div class="skills-grid">
                     <div class="skill-item">
-                        <img src="images/html5.png" alt="HTML5">
+                        <img src="images/html.png" alt="HTML5">
                     </div>
                     <div class="skill-item">
                         <img src="images/css3.png" alt="CSS3">
