--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                         <img src="images/oracledatabase.png" alt="OracleDatabase">
                     </div>
                     <div class="skill-item">
-                        <img src="images/powerbi.png" alt="Power BI">
+                        <img src="images/powerbi.jpg" alt="Power BI">
                     </div>
                     <div class="skill-item">
                         <img src="images/matlab.png" alt="MATLAB">
@@ -218,7 +218,7 @@
                         <img src="images/outsystems.png" alt="Outsystems">
                     </div>
                     <div class="skill-item">
-                        <img src="images/office.png" alt="Office">
+                        <img src="images/office.jpg" alt="Office">
                     </div>
                     <div class="skill-item">
                         <img src="images/uml.png" alt="UML">
