--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                         <img src="images/oracledatabase.png" alt="OracleDatabase">
                     </div>
                     <div class="skill-item">
-                        <img src="images/powerbi.jpg" alt="Power BI">
+                        <img src="images/powerbi.png" alt="Power BI">
                     </div>
                     <div class="skill-item">
                         <img src="images/matlab.png" alt="MATLAB">
@@ -212,7 +212,7 @@
                         <img src="images/blender.png" alt="Blender">
                     </div>
                     <div class="skill-item">
-                        <img src="images/gretl.png" alt="Gretl">
+                        <img src="images/gretl.jpg" alt="Gretl">
                     </div>
                     <div class="skill-item">
                         <img src="images/outsystems.png" alt="Outsystems">
