--- a/index.html
+++ b/index.html
@@ -258,6 +258,10 @@
                 <img src="images/coimbra1.jpg" alt="Coimbra, Portugal 2022">
                 <div class="photo-description">Coimbra, Portugal 2022</div>
             </div>
+            <div class="photo">
+                <img src="images/serracaramulo.jpg" alt="Serra do Caramulo, Portugal 2020">
+                <div class="photo-description">Serra do Caramulo, Portugal 2020</div>
+            </div>
         </div>
     </div>
 </section>
