--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#academic">Education</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#skills-interests">Insight</a></li>
+                <li><a href="#skills-interests">Insights</a></li>
                 <li><a href="#hobbies">Hobbies</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
