--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                         <img src="images/javascript.png" alt="JavaScript">
                     </div>
                     <div class="skill-item">
-                        <img src="images/Python.jpg" alt="Python">
+                        <img src="images/python.png" alt="Python">
                     </div>
                     <div class="skill-item">
                         <img src="images/r.png" alt="R">
