--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                         <img src="images/r.png" alt="R">
                     </div>
                     <div class="skill-item">
-                        <img src="images/java.png" alt="Java">
+                        <img src="images/java.jpg" alt="Java">
                     </div>
                     <div class="skill-item">
                         <img src="images/c.jpg" alt="C">
