--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                         <img src="images/outsystems.png" alt="Outsystems">
                     </div>
                     <div class="skill-item">
-                        <img src="images/office.jpg" alt="Office">
+                        <img src="images/office.png" alt="Office">
                     </div>
                     <div class="skill-item">
                         <img src="images/uml.png" alt="UML">
