--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <div class="container">
             <h2>Contact</h2>
             <p>Email: aleksandra_kw@hotmail.com</p>
+            <p>Linkedin: https://www.linkedin.com/in/oleksandra-kukharska</p>
         </div>
     </section>
     
