--- a/index.html
+++ b/index.html
@@ -26,13 +26,20 @@
         </nav>
     </header>
 
-    <section id="contact">
-        <div class="container">
-            <h2>Contact</h2>
-            <p>Email: aleksandra_kw@hotmail.com</p>
-            <p>Linkedin: https://www.linkedin.com/in/oleksandra-kukharska</p>
-        </div>
-    </section>
+<section id="contact">
+    <div class="container">
+        <h2>Contact</h2>
+        <p>Email: 
+            <a href="mailto:aleksandra_kw@hotmail.com">aleksandra_kw@hotmail.com</a>
+        </p>
+        <p>LinkedIn: 
+            <a href="https://www.linkedin.com/in/oleksandra-kukharska" target="_blank">
+                https://www.linkedin.com/in/oleksandra-kukharska
+            </a>
+        </p>
+    </div>
+</section>
+
     
     <section id="about" class="active">
         <div class="container about-container">
