--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
             </ul>
         </nav>
         <div class="sidebar-buttons">
-            <a href="files/Oleksandra_Kukharska_CV.pdf" class="btn" target="_blank">Download CV</a>
-            <a href="https://github.com/yourgithub" class="btn" target="_blank">GitHub</a>
+            <a href="files/Oleksandra_Kukharska_CV.pdf" class="btn" target="_blank">Download CV Europass</a>
         </div>
     </aside>
 
@@ -47,7 +46,6 @@
                         <li>🇺🇦 Ukrainian – C1</li>
                         <li>🇷🇺 Russian – B2</li>
                         <li>🇪🇸 Spanish – B1</li>
-                        <li>🇰🇷 Korean – Topik 1</li>
                     </ul>
                 </div>
             </div>
