--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 
-    <!-- Sidebar Menu -->
+    <!-- Sidebar lateral fixa -->
     <aside class="sidebar">
-        <div class="sidebar-logo">Oleksandra<br>Kukharska</div>
+        <div class="sidebar-logo">Oleksandra Kukharska</div>
         <nav class="sidebar-nav">
             <ul>
                 <li><a href="#about">About Me</a></li>
@@ -22,133 +22,127 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
-        <div class="sidebar-buttons">
-            <a href="files/Oleksandra_Kukharska_CV.pdf" class="btn" target="_blank">Download CV Europass</a>
-        </div>
     </aside>
 
-    <!-- Main Content -->
-    <main class="main-content">
-
-        <!-- About Section -->
-        <section id="about" class="section">
+    <!-- Conteúdo principal -->
+    <div class="main-content">
+        
+        <!-- About Me -->
+        <section id="about">
             <div class="container about-container">
-                <img src="images/Aboutme.jpg" alt="My Photo" class="profile-photo">
+                <img class="profile-photo" src="images/Aboutme.jpg" alt="My Photo">
                 <div class="about-text">
                     <h2>About Me</h2>
-                    <p>I was born in Ukraine and moved to Portugal at the age of six. When I was around eleven, I got my first computer — and that’s where it all began.
-                    I started designing HTML/CSS layouts for platforms like Hi5 and Tumblr, unknowingly taking my first steps into the world of technology...
-                    </p>
+                    <p>...teu texto completo sobre a tua trajetória...</p>
                     <h4>Language Proficiency</h4>
-                    <ul class="languages">
+                    <ul style=" font-size: 12px;">
                         <li>🇵🇹 Portuguese – C2</li>
                         <li>🇬🇧 English – C1</li>
                         <li>🇺🇦 Ukrainian – C1</li>
                         <li>🇷🇺 Russian – B2</li>
                         <li>🇪🇸 Spanish – B1</li>
+                        <li>🇰🇷 Korean – Topik 1</li>
                     </ul>
                 </div>
             </div>
         </section>
 
         <!-- Education -->
-        <section id="academic" class="section">
+        <section id="academic">
             <div class="container">
                 <h2>Education</h2>
                 <div class="timeline">
-                    <!-- Timeline items (mantive a estrutura original) -->
-                    <div class="timeline-item">
-                        <h3>Bachelor's in Accounting and Auditing</h3>
-                        <p>Coimbra Business School (ISCAC) | 2017 - 2021</p>
+                    <!-- Mantém todos os items da timeline que tens -->
+                    <div class="timeline-item left">
+                        <div class="content">
+                            <h3>Bachelor's in Accounting and Auditing</h3>
+                            <span class="year">2017</span>
+                            <div class="info">
+                                <p><strong>Institution:</strong> Coimbra Business School (ISCAC)</p>
+                                <p><strong>Grade:</strong> 12/20</p>
+                                <p><strong>Period:</strong> 2017 - 2021</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="timeline-item">
-                        <h3>Bachelor's in Business Management</h3>
-                        <p>Coimbra Business School (ISCAC) | 2020 - 2023</p>
-                    </div>
-                    <div class="timeline-item">
-                        <h3>Master’s in Data Analysis and Decision Supporting Systems</h3>
-                        <p>Coimbra Business School (ISCAC) | 2021 - 2023</p>
-                    </div>
-                    <div class="timeline-item">
-                        <h3>Bachelor's in Informatics Engineering</h3>
-                        <p>Coimbra Institute of Engineering (ISEC) | 2022 - Present</p>
-                        <p><strong>Erasmus+</strong> at Lodz University of Technology (Poland) – 2025</p>
-                    </div>
+                    <!-- Repete para todos os outros cursos -->
                 </div>
             </div>
         </section>
 
         <!-- Projects -->
-        <section id="projects" class="section">
+        <section id="projects">
             <div class="container">
                 <h2>Projects</h2>
                 <div class="projects-categories">
-                    <button onclick="filterProjects('all')">All</button>
-                    <button onclick="filterProjects('AI')">AI</button>
-                    <button onclick="filterProjects('BI')">Business Intelligence</button>
+                    <button class="filter-btn" onclick="filterProjects('all')">All</button>
+                    <button class="filter-btn" onclick="filterProjects('Statistics')">Statistics</button>
+                    <button class="filter-btn" onclick="filterProjects('ArtificialIntelligence')">Artificial Intelligence</button>
+                    <button class="filter-btn" onclick="filterProjects('BusinessIntelligence')">Business Intelligence</button>
+                    <button class="filter-btn" onclick="filterProjects('DataWarehousing')">Data Warehousing</button>
+                    <button class="filter-btn" onclick="filterProjects('DataMining')">Data Mining</button>
+                    <button class="filter-btn" onclick="filterProjects('ITManagement')">IT Management</button>
                 </div>
+
                 <div class="projects-list">
-                    <div class="project-card AI">
-                        <h3>Cyrillic Letter Recognition</h3>
-                        <p>Deep learning model using VGG16 & Transfer Learning.</p>
+                    <!-- Mantém todos os project-card que tens, com os logos e PDFs -->
+                    <div class="project-card Statistics" onclick="showPreview('files/Metodos_Quantitativos_em_Criptomoedas.pdf')">
+                        <h3>Quantitative Methods in Cryptocurrencies</h3>
+                        <p>Statistical Analysis of 3 Cryptocurrencies</p>
                     </div>
-                    <div class="project-card BI">
-                        <h3>Power BI Academic Dashboard</h3>
-                        <p>Performance analysis for students and teachers.</p>
-                    </div>
+                    <!-- Continua para todos os outros projetos -->
+                </div>
+
+                <div class="file-preview" id="file-preview">
+                    <iframe id="file-frame" src="" width="100%" height="500px"></iframe>
                 </div>
             </div>
         </section>
 
-        <!-- Skills & Interests -->
-        <section id="skills-interests" class="section">
+        <!-- Insights / Skills -->
+        <section id="skills-interests">
             <div class="container">
-                <h2>Insights</h2>
-                <div class="columns">
-                    <div>
+                <div class="row columns">
+                    <div class="column interests">
                         <h3>Interests</h3>
-                        <ul>
-                            <li>Artificial Intelligence</li>
-                            <li>Data Science</li>
-                            <li>Computer Graphics</li>
-                            <li>UX/UI Design</li>
-                        </ul>
+                        <!-- Mantém todos os interest-item e sub-interests -->
                     </div>
-                    <div>
+                    <div class="column technical-skills">
                         <h3>Technical Skills</h3>
-                        <ul>
-                            <li>Python, Java, R</li>
-                            <li>SQL (Oracle, SQL Server)</li>
-                            <li>React, HTML, CSS</li>
-                            <li>Power BI, MATLAB</li>
-                        </ul>
+                        <div class="skills-grid">
+                            <!-- Mantém todos os logos das skills -->
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
 
         <!-- Hobbies -->
-        <section id="hobbies" class="section">
+        <section id="hobbies">
             <div class="container">
                 <h2>Hobbies</h2>
                 <p>I am passionate about photography. Here are some of my shots!</p>
                 <div class="photo-gallery">
-                    <img src="images/aveiro1.jpg" alt="Aveiro">
-                    <img src="images/butterfly.jpg" alt="Butterfly">
+                    <!-- Mantém todas as fotos -->
                 </div>
             </div>
         </section>
 
         <!-- Contact -->
-        <section id="contact" class="section">
+        <section id="contact">
             <div class="container">
                 <h2>Contact</h2>
-                <p>Email: <a href="mailto:aleksandra_kw@hotmail.com">aleksandra_kw@hotmail.com</a></p>
-                <p>LinkedIn: <a href="https://www.linkedin.com/in/oleksandra-kukharska" target="_blank">LinkedIn Profile</a></p>
+                <p>Email: 
+                    <a href="mailto:aleksandra_kw@hotmail.com">aleksandra_kw@hotmail.com</a>
+                </p>
+                <p>LinkedIn: 
+                    <a href="https://www.linkedin.com/in/oleksandra-kukharska" target="_blank">
+                        https://www.linkedin.com/in/oleksandra-kukharska
+                    </a>
+                </p>
             </div>
         </section>
 
-    </main>
+    </div> <!-- main-content -->
 
 </body>
 </html>
