--- a/index.html
+++ b/index.html
@@ -1,1 +1,156 @@
-<!DOCTYPE html> <html lang="en"> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>Oleksandra Kukharska - CV</title> <link rel="stylesheet" href="style.css"> <script src="script.js" defer></script> </head> <body> <header> <div class="top-bar"> Oleksandra Kukharska - CV </div> <nav> <ul> <li><a href="#about">About Me</a></li> <li><a href="#academic">Education</a></li> <li><a href="#projects">Projects</a></li> <li><a href="#skills-interests">Insights</a></li> <li><a href="#hobbies">Hobbies</a></li> <li><a href="#contact">Contact</a></li> </ul> </nav> </header> <section id="contact"> <div class="container"> <h2>Contact</h2> <p>Email: <a href="mailto:aleksandra_kw@hotmail.com">aleksandra_kw@hotmail.com</a> </p> <p>LinkedIn: <a href="https://www.linkedin.com/in/oleksandra-kukharska" target="_blank"> https://www.linkedin.com/in/oleksandra-kukharska </a> </p> </div> </section> <section id="about" class="active"> <div class="container about-container"> <img src="images/Aboutme.jpg" alt="My Photo"> <div class="about-text"> <h2>About Me</h2> <p>I was born in Ukraine and moved to Portugal at the age of six. When I was around eleven, I got my first computer — and that’s where it all began. I started designing HTML/CSS layouts for platforms like Hi5 and Tumblr, unknowingly taking my first steps into the world of technology. At the time, I wasn’t sure how to further develop this interest, so I stepped away from it for a while. However, the curiosity never really faded.<br><br> During my college application process, I wasn’t entirely sure which path to pursue, so I decided to go with a Bachelor's in Accounting and Auditing. While I enjoyed it, I still wasn’t sure if it was the right course for me, so I decided to pursue another Bachelor's, this time in Business Management. For my second cycle of studies, I chose a Master’s in Data Analysis and Decision Supporting Systems, as it combines both technology and business. After building a strong foundation in business, I decided to deepen my programming skills, so I’m currently pursuing a Bachelor's in Informatics Engineering.<br><br> On this webpage, you can explore some of my projects, interests, and hobbies.<br> <h4>Language Proficiency</h4> <ul style=" font-size: 12px;"> <li>🇵🇹 Portuguese – C2</li> <li>🇬🇧 English – C1</li> <li>🇺🇦 Ukrainian – C1</li> <li>🇷🇺 Russian – B2</li> <li>🇪🇸 Spanish – B1</li> <li>🇰🇷 Korean – Topik 1</li> </ul> </p> </div> </div> </section> <section id="academic"> <div class="container"> <h2>Education</h2> <div class="timeline"> <div class="timeline-item left"> <div class="content"> <h3>Bachelor's in Accounting and Auditing</h3> <span class="year">2017</span> <div class="info"> <p><strong>Institution:</strong> Coimbra Business School (ISCAC)</p> <p><strong>Grade:</strong> 12/20</p> <p><strong>Period:</strong> 2017 - 2021</p> </div> </div> </div> <div class="timeline-item right"> <div class="content"> <h3>Bachelor's in Business Management</h3> <span class="year">2020</span> <div class="info"> <p><strong>Institution:</strong> Coimbra Business School (ISCAC)</p> <p><strong>Grade:</strong> 12/20</p> <p><strong>Period:</strong> 2020 - 2023</p> </div> </div> </div> <div class="timeline-item left"> <div class="content"> <h3>Master’s in Data Analysis and Decision Supporting Systems</h3> <span class="year">2021</span> <div class="info"> <p><strong>Institution:</strong> Coimbra Business School (ISCAC)</p> <p><strong>Grade:</strong> 16/20</p> <p><strong>Period:</strong> 2021 - 2023</p> </div> </div> </div> <div class="timeline-item right"> <div class="content"> <h3>Bachelor's in Informatics Engineering</h3> <span class="year">2022</span> <div class="info"> <p><strong>Institution:</strong> Coimbra Institute of Engineering (ISEC)</p> <p><strong>Grade:</strong> Currently in progress</p> <p><strong>Period:</strong> 2022 - Present</p> </div> </div> </div> </div> </div> </section> <section id="skills-interests"> <div class="container"> <div class="row"> <!-- Interests Column --> <div class="column interests"> <h3>Interests</h3> <div class="interest-item"> <h4>Artificial Intelligence</h4> <div class="sub-interests"> <ul> <li>Computer Vision</li> <li>Natural Language Processing</li> <li>Deep Learning</li> <li>Machine Learning</li> </ul> </div> </div> <div class="interest-item"> <h4>Data Science</h4> <div class="sub-interests"> <ul> <li>Exploratory Data Analysis</li> <li>Data Mining</li> <li>Big Data</li> <li>Business Intelligence</li> </ul> </div> </div> <div class="interest-item"> <h4>Computer Graphics</h4> <div class="sub-interests"> <ul> <li>3D Computer Graphics</li> </ul> </div> </div> <div class="interest-item"> <h4>Data Administration</h4> <div class="sub-interests"> <ul> <li>Data Modelling</li> <li>Data Integration</li> <li>Database Architecture</li> </ul> </div> </div> <div class="interest-item"> <h4>UX/UI Design</h4> <div class="sub-interests"> <ul> <li>Design Principles</li> <li>Wireframing</li> <li>Prototyping</li> </ul> </div> </div> </div> <div class="column technical-skills"> <h3>Technical Skills</h3> <div class="skills-grid"> <div class="skill-item"> <img src="images/html.png" alt="HTML5"> </div> <div class="skill-item"> <img src="images/css3.png" alt="CSS3"> </div> <div class="skill-item"> <img src="images/javascript.png" alt="JavaScript"> </div> <div class="skill-item"> <img src="images/Python.jpg" alt="Python"> </div> <div class="skill-item"> <img src="images/r.png" alt="R"> </div> <div class="skill-item"> <img src="images/java.jpg" alt="Java"> </div> <div class="skill-item"> <img src="images/c.jpg" alt="C"> </div> <div class="skill-item"> <img src="images/SQLServer.png" alt="SQLServer"> </div> <div class="skill-item"> <img src="images/oracledatabase.png" alt="OracleDatabase"> </div> <div class="skill-item"> <img src="images/powerbi.png" alt="Power BI"> </div> <div class="skill-item"> <img src="images/matlab.png" alt="MATLAB"> </div> <div class="skill-item"> <img src="images/blender.png" alt="Blender"> </div> <div class="skill-item"> <img src="images/gretl.jpg" alt="Gretl"> </div> <div class="skill-item"> <img src="images/outsystems.png" alt="Outsystems"> </div> <div class="skill-item"> <img src="images/office.png" alt="Office"> </div> <div class="skill-item"> <img src="images/uml.png" alt="UML"> </div> </div> </div> </div> </div> </section> <section id="hobbies"> <div class="container"> <h2>Hobbies</h2> <p>I am passionate about photography. Here are some of my shots!</p> <div class="photo-gallery"> <div class="photo"> <img src="images/aveiro1.jpg" alt="Aveiro, Portugal"> <div class="photo-description">Aveiro, Portugal</div> </div> <div class="photo"> <img src="images/butterfly.jpg" alt="Butterfly"> <div class="photo-description">Butterfly</div> </div> <div class="photo"> <img src="images/figueiradafoz1.jpg" alt="Figueira da Foz, Portugal 2018"> <div class="photo-description">Figueira da Foz, Portugal 2018</div> </div> <div class="photo"> <img src="images/figueiradafoz2.jpg" alt="Figueira da Foz, Portugal 2018"> <div class="photo-description">Figueira da Foz, Portugal 2018</div> </div> <div class="photo"> <img src="images/lisboa1.jpg" alt="Terreiro do Paço, Lisboa, Portugal 2023"> <div class="photo-description">Terreiro do Paço, Lisboa, Portugal 2023</div> </div> <div class="photo"> <img src="images/coimbra1.jpg" alt="Coimbra, Portugal 2022"> <div class="photo-description">Coimbra, Portugal 2022</div> </div> <div class="photo"> <img src="images/serracaramulo.jpg" alt="Serra do Caramulo, Portugal 2020"> <div class="photo-description">Serra do Caramulo, Portugal 2020</div> </div> </div> </div> </section> <section id="projects"> <div class="container"> <h2>Projects</h2> <div class="projects-categories"> <button class="filter-btn" onclick="filterProjects('all')">All</button> <button class="filter-btn" onclick="filterProjects('Statistics')">Statistics</button> <button class="filter-btn" onclick="filterProjects('ArtificialIntelligence')">Artificial Intelligence</button> <button class="filter-btn" onclick="filterProjects('BusinessIntelligence')">Business Intelligence</button> <button class="filter-btn" onclick="filterProjects('DataWarehousing')">Data Warehousing</button> <button class="filter-btn" onclick="filterProjects('DataMining')">Data Mining</button> <button class="filter-btn" onclick="filterProjects('ITManagement')">IT Management</button> </div> <div class="projects-list"> <div class="project-card Statistics" onclick="showPreview('files/Metodos_Quantitativos_em_Criptomoedas.pdf')"> <h3>Quantitative Methods in Cryptocurrencies</h3> <p>Statistical Analysis of 3 Cryptocurrencies</p> </div> <div class="project-card BusinessIntelligence" onclick="showPreview('files/SI2PowerBI-Dashboard.pdf')"> <h3>Academic Performance in PowerBI</h3> <p>Power BI Visualization of Academic Performance of Students and Teachers</p> </div> <div class="project-card DataWarehousing" onclick="showPreview('files/SI2Datawarehouse.pdf')"> <h3>Research Report - OLAP and its tools</h3> <p>Exploring OLAP Tools and Their Application in Decision Support Systems</p> </div> <div class="project-card ArtificialIntelligence" onclick="showPreview('files/ICModeloCNN.pdf')"> <h3>Analysis of the Problem and Development of a Model with CNN Networks</h3> <p>Design and Optimization of CNN Models for Multi-Class Classification</p> </div> <div class="project-card ArtificialIntelligence" onclick="showPreview('files/ICComputacaoSwarm.pdf')"> <h3>Swarm Intelligence</h3> <p>Nature-Inspired Optimization for Neural Networks</p> </div> <div class="project-card ArtificialIntelligence" onclick="showPreview('files/ICTransferLearning.pdf')"> <h3>Transfer learning and deployment of neural network models</h3> <p>Implementation and Application of a Classification Model</p> </div> <div class="project-card Statistics" onclick="showPreview('files/ProjetoAED.pdf')"> <h3>Exploratory Data Analysis Project</h3> <p>Econometric Techniques Applied to the Foreign Exchange and Stock Market</p> </div> <div class="project-card ITManagement" onclick="showPreview('files/RelatorioSeB.pdf')"> <h3>eBusiness Systems Project</h3> <p>Development and Market Analysis</p> </div> <div class="project-card Statistics" onclick="showPreview('files/MTIPerformance.pdf')"> <h3>Performance in the Olympic Games</h3> <p>A Statistical Analysis of the 2022 Winter Olympics</p> </div> <div class="project-card BusinessIntelligence" onclick="showPreview('files/BIAnalysis.pdf')"> <h3>Social Media Analytics Tools</h3> <p>Critical Analysis</p> </div> <div class="project-card DataMining" onclick="showPreview('files/DataMining-PrecosGas.pdf')"> <h3>Evolution of Natural Gas Prices in Portugal Compared to EU Countries</h3> <p>A Data Mining Approach to Price Trends</p> </div> <div class="project-card ArtificialIntelligence" onclick="showPreview('files/BDDigitRec.pdf')"> <h3>Handwritten Digit Recognition in Python</h3> <p>Test of 3 Supervised Learning Algorithms</p> </div> <div class="project-card ArtificialIntelligence" onclick="showPreview('files/Thesis_Oleksandra_Kukharska.pdf')"> <h3>Master Thesis</h3> <p>Artificial Intelligence in Invoice Recognition: A Systematic Literature Review</p> </div> </div> <div class="file-preview" id="file-preview"> <iframe id="file-frame" src="" width="100%" height="500px"></iframe> </div> </div> </section> </body> </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Oleksandra Kukharska - CV</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
+</head>
+<body>
+
+    <!-- Sidebar -->
+    <aside class="sidebar">
+        <div class="sidebar-logo">Oleksandra Kukharska - CV</div>
+        <nav class="sidebar-nav">
+            <ul>
+                <li><a href="#about" class="active">About Me</a></li>
+                <li><a href="#academic">Education</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#skills-interests">Insights</a></li>
+                <li><a href="#hobbies">Hobbies</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </aside>
+
+    <!-- Main content -->
+    <div class="main-content">
+
+        <!-- About Me -->
+        <section id="about">
+            <div class="about-container">
+                <img src="images/Aboutme.jpg" alt="My Photo">
+                <div class="about-text">
+                    <h2>About Me</h2>
+                    <p>
+                        I was born in Ukraine and moved to Portugal at the age of six. When I was around eleven, I got my first computer — and that’s where it all began. I started designing HTML/CSS layouts for platforms like Hi5 and Tumblr, unknowingly taking my first steps into the world of technology. At the time, I wasn’t sure how to further develop this interest, so I stepped away from it for a while. However, the curiosity never really faded.<br><br>
+                        During my college application process, I wasn’t entirely sure which path to pursue, so I decided to go with a Bachelor's in Accounting and Auditing. While I enjoyed it, I still wasn’t sure if it was the right course for me, so I decided to pursue another Bachelor's, this time in Business Management. For my second cycle of studies, I chose a Master’s in Data Analysis and Decision Supporting Systems, as it combines both technology and business. After building a strong foundation in business, I decided to deepen my programming skills, so I’m currently pursuing a Bachelor's in Informatics Engineering.<br><br>
+                        On this webpage, you can explore some of my projects, interests, and hobbies.
+                    </p>
+                    <h4>Language Proficiency</h4>
+                    <ul>
+                        <li>🇵🇹 Portuguese – C2</li>
+                        <li>🇬🇧 English – C1</li>
+                        <li>🇺🇦 Ukrainian – C1</li>
+                        <li>🇷🇺 Russian – B2</li>
+                        <li>🇪🇸 Spanish – B1</li>
+                        <li>🇰🇷 Korean – Topik 1</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <!-- Education -->
+        <section id="academic">
+            <h2>Education</h2>
+            <div class="timeline">
+                <!-- Timeline items (igual ao que já tens) -->
+                <div class="timeline-item left">
+                    <div class="content">
+                        <h3>Bachelor's in Accounting and Auditing</h3>
+                        <span class="year">2017</span>
+                        <div class="info">
+                            <p><strong>Institution:</strong> Coimbra Business School (ISCAC)</p>
+                            <p><strong>Grade:</strong> 12/20</p>
+                            <p><strong>Period:</strong> 2017 - 2021</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="timeline-item right">
+                    <div class="content">
+                        <h3>Bachelor's in Business Management</h3>
+                        <span class="year">2020</span>
+                        <div class="info">
+                            <p><strong>Institution:</strong> Coimbra Business School (ISCAC)</p>
+                            <p><strong>Grade:</strong> 12/20</p>
+                            <p><strong>Period:</strong> 2020 - 2023</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="timeline-item left">
+                    <div class="content">
+                        <h3>Master’s in Data Analysis and Decision Supporting Systems</h3>
+                        <span class="year">2021</span>
+                        <div class="info">
+                            <p><strong>Institution:</strong> Coimbra Business School (ISCAC)</p>
+                            <p><strong>Grade:</strong> 16/20</p>
+                            <p><strong>Period:</strong> 2021 - 2023</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="timeline-item right">
+                    <div class="content">
+                        <h3>Bachelor's in Informatics Engineering</h3>
+                        <span class="year">2022</span>
+                        <div class="info">
+                            <p><strong>Institution:</strong> Coimbra Institute of Engineering (ISEC)</p>
+                            <p><strong>Grade:</strong> Currently in progress</p>
+                            <p><strong>Period:</strong> 2022 - Present</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Skills & Interests -->
+        <section id="skills-interests">
+            <div class="row">
+                <div class="column interests">
+                    <h3>Interests</h3>
+                    <!-- interest-item elements como tens -->
+                </div>
+                <div class="column technical-skills">
+                    <h3>Technical Skills</h3>
+                    <div class="skills-grid">
+                        <!-- skill-item elements como tens -->
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Hobbies -->
+        <section id="hobbies">
+            <h2>Hobbies</h2>
+            <p>I am passionate about photography. Here are some of my shots!</p>
+            <div class="photo-gallery">
+                <!-- photo elements como tens -->
+            </div>
+        </section>
+
+        <!-- Projects -->
+        <section id="projects">
+            <h2>Projects</h2>
+            <div class="projects-categories">
+                <!-- filter buttons -->
+            </div>
+            <div class="projects-list">
+                <!-- project-card elements -->
+            </div>
+            <div class="file-preview" id="file-preview">
+                <iframe id="file-frame" src="" width="100%" height="500px"></iframe>
+            </div>
+        </section>
+
+        <!-- Contact -->
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>Email: <a href="mailto:aleksandra_kw@hotmail.com">aleksandra_kw@hotmail.com</a></p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/oleksandra-kukharska" target="_blank">
+                https://www.linkedin.com/in/oleksandra-kukharska
+            </a></p>
+        </section>
+
+    </div>
+</body>
+</html>
