--- a/index.html
+++ b/index.html
@@ -29,17 +29,15 @@
 
         <!-- About Me -->
         <section id="about">
-            <div class="about-container">
+            <div class="container about-container">
                 <img src="images/Aboutme.jpg" alt="My Photo">
                 <div class="about-text">
                     <h2>About Me</h2>
-                    <p>
-                        I was born in Ukraine and moved to Portugal at the age of six. When I was around eleven, I got my first computer — and that’s where it all began. I started designing HTML/CSS layouts for platforms like Hi5 and Tumblr, unknowingly taking my first steps into the world of technology. At the time, I wasn’t sure how to further develop this interest, so I stepped away from it for a while. However, the curiosity never really faded.<br><br>
-                        During my college application process, I wasn’t entirely sure which path to pursue, so I decided to go with a Bachelor's in Accounting and Auditing. While I enjoyed it, I still wasn’t sure if it was the right course for me, so I decided to pursue another Bachelor's, this time in Business Management. For my second cycle of studies, I chose a Master’s in Data Analysis and Decision Supporting Systems, as it combines both technology and business. After building a strong foundation in business, I decided to deepen my programming skills, so I’m currently pursuing a Bachelor's in Informatics Engineering.<br><br>
-                        On this webpage, you can explore some of my projects, interests, and hobbies.
-                    </p>
+                    <p>I was born in Ukraine and moved to Portugal at the age of six. When I was around eleven, I got my first computer — and that’s where it all began. I started designing HTML/CSS layouts for platforms like Hi5 and Tumblr, unknowingly taking my first steps into the world of technology. At the time, I wasn’t sure how to further develop this interest, so I stepped away from it for a while. However, the curiosity never really faded.<br><br>
+                    During my college application process, I wasn’t entirely sure which path to pursue, so I decided to go with a Bachelor's in Accounting and Auditing. While I enjoyed it, I still wasn’t sure if it was the right course for me, so I decided to pursue another Bachelor's, this time in Business Management. For my second cycle of studies, I chose a Master’s in Data Analysis and Decision Supporting Systems, as it combines both technology and business. After building a strong foundation in business, I decided to deepen my programming skills, so I’m currently pursuing a Bachelor's in Informatics Engineering.<br><br>
+                    On this webpage, you can explore some of my projects, interests, and hobbies.<br></p>
                     <h4>Language Proficiency</h4>
-                    <ul>
+                    <ul style="font-size: 12px;">
                         <li>🇵🇹 Portuguese – C2</li>
                         <li>🇬🇧 English – C1</li>
                         <li>🇺🇦 Ukrainian – C1</li>
@@ -53,50 +51,51 @@
 
         <!-- Education -->
         <section id="academic">
-            <h2>Education</h2>
-            <div class="timeline">
-                <!-- Timeline items (igual ao que já tens) -->
-                <div class="timeline-item left">
-                    <div class="content">
-                        <h3>Bachelor's in Accounting and Auditing</h3>
-                        <span class="year">2017</span>
-                        <div class="info">
-                            <p><strong>Institution:</strong> Coimbra Business School (ISCAC)</p>
-                            <p><strong>Grade:</strong> 12/20</p>
-                            <p><strong>Period:</strong> 2017 - 2021</p>
+            <div class="container">
+                <h2>Education</h2>
+                <div class="timeline">
+                    <div class="timeline-item left">
+                        <div class="content">
+                            <h3>Bachelor's in Accounting and Auditing</h3>
+                            <span class="year">2017</span>
+                            <div class="info">
+                                <p><strong>Institution:</strong> Coimbra Business School (ISCAC)</p>
+                                <p><strong>Grade:</strong> 12/20</p>
+                                <p><strong>Period:</strong> 2017 - 2021</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="timeline-item right">
-                    <div class="content">
-                        <h3>Bachelor's in Business Management</h3>
-                        <span class="year">2020</span>
-                        <div class="info">
-                            <p><strong>Institution:</strong> Coimbra Business School (ISCAC)</p>
-                            <p><strong>Grade:</strong> 12/20</p>
-                            <p><strong>Period:</strong> 2020 - 2023</p>
+                    <div class="timeline-item right">
+                        <div class="content">
+                            <h3>Bachelor's in Business Management</h3>
+                            <span class="year">2020</span>
+                            <div class="info">
+                                <p><strong>Institution:</strong> Coimbra Business School (ISCAC)</p>
+                                <p><strong>Grade:</strong> 12/20</p>
+                                <p><strong>Period:</strong> 2020 - 2023</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="timeline-item left">
-                    <div class="content">
-                        <h3>Master’s in Data Analysis and Decision Supporting Systems</h3>
-                        <span class="year">2021</span>
-                        <div class="info">
-                            <p><strong>Institution:</strong> Coimbra Business School (ISCAC)</p>
-                            <p><strong>Grade:</strong> 16/20</p>
-                            <p><strong>Period:</strong> 2021 - 2023</p>
+                    <div class="timeline-item left">
+                        <div class="content">
+                            <h3>Master’s in Data Analysis and Decision Supporting Systems</h3>
+                            <span class="year">2021</span>
+                            <div class="info">
+                                <p><strong>Institution:</strong> Coimbra Business School (ISCAC)</p>
+                                <p><strong>Grade:</strong> 16/20</p>
+                                <p><strong>Period:</strong> 2021 - 2023</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="timeline-item right">
-                    <div class="content">
-                        <h3>Bachelor's in Informatics Engineering</h3>
-                        <span class="year">2022</span>
-                        <div class="info">
-                            <p><strong>Institution:</strong> Coimbra Institute of Engineering (ISEC)</p>
-                            <p><strong>Grade:</strong> Currently in progress</p>
-                            <p><strong>Period:</strong> 2022 - Present</p>
+                    <div class="timeline-item right">
+                        <div class="content">
+                            <h3>Bachelor's in Informatics Engineering</h3>
+                            <span class="year">2022</span>
+                            <div class="info">
+                                <p><strong>Institution:</strong> Coimbra Institute of Engineering (ISEC)</p>
+                                <p><strong>Grade:</strong> Currently in progress</p>
+                                <p><strong>Period:</strong> 2022 - Present</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -105,15 +104,84 @@
 
         <!-- Skills & Interests -->
         <section id="skills-interests">
-            <div class="row">
-                <div class="column interests">
-                    <h3>Interests</h3>
-                    <!-- interest-item elements como tens -->
-                </div>
-                <div class="column technical-skills">
-                    <h3>Technical Skills</h3>
-                    <div class="skills-grid">
-                        <!-- skill-item elements como tens -->
+            <div class="container">
+                <div class="row">
+                    <!-- Interests Column -->
+                    <div class="column interests">
+                        <h3>Interests</h3>
+                        <div class="interest-item">
+                            <h4>Artificial Intelligence</h4>
+                            <div class="sub-interests">
+                                <ul>
+                                    <li>Computer Vision</li>
+                                    <li>Natural Language Processing</li>
+                                    <li>Deep Learning</li>
+                                    <li>Machine Learning</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="interest-item">
+                            <h4>Data Science</h4>
+                            <div class="sub-interests">
+                                <ul>
+                                    <li>Exploratory Data Analysis</li>
+                                    <li>Data Mining</li>
+                                    <li>Big Data</li>
+                                    <li>Business Intelligence</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="interest-item">
+                            <h4>Computer Graphics</h4>
+                            <div class="sub-interests">
+                                <ul>
+                                    <li>3D Computer Graphics</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="interest-item">
+                            <h4>Data Administration</h4>
+                            <div class="sub-interests">
+                                <ul>
+                                    <li>Data Modelling</li>
+                                    <li>Data Integration</li>
+                                    <li>Database Architecture</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="interest-item">
+                            <h4>UX/UI Design</h4>
+                            <div class="sub-interests">
+                                <ul>
+                                    <li>Design Principles</li>
+                                    <li>Wireframing</li>
+                                    <li>Prototyping</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Technical Skills Column -->
+                    <div class="column technical-skills">
+                        <h3>Technical Skills</h3>
+                        <div class="skills-grid">
+                            <div class="skill-item"><img src="images/html.png" alt="HTML5"></div>
+                            <div class="skill-item"><img src="images/css3.png" alt="CSS3"></div>
+                            <div class="skill-item"><img src="images/javascript.png" alt="JavaScript"></div>
+                            <div class="skill-item"><img src="images/Python.jpg" alt="Python"></div>
+                            <div class="skill-item"><img src="images/r.png" alt="R"></div>
+                            <div class="skill-item"><img src="images/java.jpg" alt="Java"></div>
+                            <div class="skill-item"><img src="images/c.jpg" alt="C"></div>
+                            <div class="skill-item"><img src="images/SQLServer.png" alt="SQLServer"></div>
+                            <div class="skill-item"><img src="images/oracledatabase.png" alt="OracleDatabase"></div>
+                            <div class="skill-item"><img src="images/powerbi.png" alt="Power BI"></div>
+                            <div class="skill-item"><img src="images/matlab.png" alt="MATLAB"></div>
+                            <div class="skill-item"><img src="images/blender.png" alt="Blender"></div>
+                            <div class="skill-item"><img src="images/gretl.jpg" alt="Gretl"></div>
+                            <div class="skill-item"><img src="images/outsystems.png" alt="Outsystems"></div>
+                            <div class="skill-item"><img src="images/office.png" alt="Office"></div>
+                            <div class="skill-item"><img src="images/uml.png" alt="UML"></div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -121,36 +189,76 @@
 
         <!-- Hobbies -->
         <section id="hobbies">
-            <h2>Hobbies</h2>
-            <p>I am passionate about photography. Here are some of my shots!</p>
-            <div class="photo-gallery">
-                <!-- photo elements como tens -->
+            <div class="container">
+                <h2>Hobbies</h2>
+                <p>I am passionate about photography. Here are some of my shots!</p>
+                <div class="photo-gallery">
+                    <div class="photo">
+                        <img src="images/aveiro1.jpg" alt="Aveiro, Portugal">
+                        <div class="photo-description">Aveiro, Portugal</div>
+                    </div>
+                    <div class="photo">
+                        <img src="images/butterfly.jpg" alt="Butterfly">
+                        <div class="photo-description">Butterfly</div>
+                    </div>
+                    <div class="photo">
+                        <img src="images/figueiradafoz1.jpg" alt="Figueira da Foz, Portugal 2018">
+                        <div class="photo-description">Figueira da Foz, Portugal 2018</div>
+                    </div>
+                    <div class="photo">
+                        <img src="images/figueiradafoz2.jpg" alt="Figueira da Foz, Portugal 2018">
+                        <div class="photo-description">Figueira da Foz, Portugal 2018</div>
+                    </div>
+                    <div class="photo">
+                        <img src="images/lisboa1.jpg" alt="Terreiro do Paço, Lisboa, Portugal 2023">
+                        <div class="photo-description">Terreiro do Paço, Lisboa, Portugal 2023</div>
+                    </div>
+                    <div class="photo">
+                        <img src="images/coimbra1.jpg" alt="Coimbra, Portugal 2022">
+                        <div class="photo-description">Coimbra, Portugal 2022</div>
+                    </div>
+                    <div class="photo">
+                        <img src="images/serracaramulo.jpg" alt="Serra do Caramulo, Portugal 2020">
+                        <div class="photo-description">Serra do Caramulo, Portugal 2020</div>
+                    </div>
+                </div>
             </div>
         </section>
 
         <!-- Projects -->
         <section id="projects">
-            <h2>Projects</h2>
-            <div class="projects-categories">
-                <!-- filter buttons -->
-            </div>
-            <div class="projects-list">
-                <!-- project-card elements -->
-            </div>
-            <div class="file-preview" id="file-preview">
-                <iframe id="file-frame" src="" width="100%" height="500px"></iframe>
+            <div class="container">
+                <h2>Projects</h2>
+                <div class="projects-categories">
+                    <button class="filter-btn" onclick="filterProjects('all')">All</button>
+                    <button class="filter-btn" onclick="filterProjects('Statistics')">Statistics</button>
+                    <button class="filter-btn" onclick="filterProjects('ArtificialIntelligence')">Artificial Intelligence</button>
+                    <button class="filter-btn" onclick="filterProjects('BusinessIntelligence')">Business Intelligence</button>
+                    <button class="filter-btn" onclick="filterProjects('DataWarehousing')">Data Warehousing</button>
+                    <button class="filter-btn" onclick="filterProjects('DataMining')">Data Mining</button>
+                    <button class="filter-btn" onclick="filterProjects('ITManagement')">IT Management</button>
+                </div>
+                <div class="projects-list">
+                    <!-- Todos os project-card conforme o teu HTML original -->
+                </div>
+                <div class="file-preview" id="file-preview">
+                    <iframe id="file-frame" src="" width="100%" height="500px"></iframe>
+                </div>
             </div>
         </section>
 
         <!-- Contact -->
         <section id="contact">
-            <h2>Contact</h2>
-            <p>Email: <a href="mailto:aleksandra_kw@hotmail.com">aleksandra_kw@hotmail.com</a></p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/oleksandra-kukharska" target="_blank">
-                https://www.linkedin.com/in/oleksandra-kukharska
-            </a></p>
+            <div class="container">
+                <h2>Contact</h2>
+                <p>Email: <a href="mailto:aleksandra_kw@hotmail.com">aleksandra_kw@hotmail.com</a></p>
+                <p>LinkedIn: <a href="https://www.linkedin.com/in/oleksandra-kukharska" target="_blank">
+                    https://www.linkedin.com/in/oleksandra-kukharska
+                </a></p>
+            </div>
         </section>
 
     </div>
+
 </body>
 </html>
